[package]
name = "nft-storage"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
jsonwebtoken = "7.2.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.2"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }